--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -42,7 +42,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
-          username: 
+          username: 深鲸原
           password: ${{ secrets.ALIYUN_PASSWORD }}
 
       - name: Build and Push Image
