--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
+    "fastify": "^4.24.3",
+    "@fastify/cors": "^8.4.1",
     "dotenv": "^16.3.1"
   },
   "devDependencies": {
