--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "fastify": "^4.24.3",
     "@fastify/cors": "^8.4.1",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.4.7",
+    "fastify": "^4.24.3",
+    "glob": "^11.0.0",
+    "mongodb": "^6.12.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
