--- a/package.json
+++ b/package.json
@@ -4,15 +4,22 @@
   "description": "Model Context Protocol Registry API",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.mjs",
+    "dev": "nodemon server.mjs"
   },
   "dependencies": {
-    "fastify": "^4.24.3",
-    "@fastify/cors": "^8.4.1",
-    "dotenv": "^16.3.1"
+    "@fastify/cors": "^10.0.1",
+    "@fastify/postgres": "^6.0.1",
+    "@xenova/transformers": "^2.17.2",
+    "dotenv": "^16.3.1",
+    "fastify": "^5.2.0",
+    "pg": "^8.13.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
-  }
+    "nodemon": "^3.0.2",
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.2"
+  },
+  "packageManager": "pnpm@9.15.0",
+  "type": "module"
 }
