--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@xenova/transformers": "^2.17.2",
     "dotenv": "^16.3.1",
     "fastify": "^5.2.0",
+    "openai": "^4.77.0",
     "pg": "^8.13.1"
   },
   "devDependencies": {
